# flat

./: CMakeLists.txt  Doxyfile  Makefile  dump_test.py  flat.py  flat.sln  flat.vcxproj  flat.vcxproj.filters  format.sh  magnetic.py  main.cc  material.cc  material.hh  rng.hh  run.py  vec2.hh
scripts/: cvc.py  flat.py  freq.py  magnetic.py  one_particle.py  population.py
src/: main.cc  material.cc  material.hh  physics.hh  rng.hh  stats.hh  vec2.hh  vec2_test.cc
src/materials/: bigraphene.cc  graphene.cc
tests/: CMakeLists.txt  rng.cc  vec2.cc
