cmake_minimum_required(VERSION 2.6)
project(flat)
add_subdirectory(tests)

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
add_executable(flat src/main.cc src/material.cc src/materials/bigraphene.cc src/materials/graphene.cc)
target_compile_features(flat PRIVATE cxx_aggregate_default_initializers)
