cmake_minimum_required(VERSION 2.6)
project(flat)
add_subdirectory(tests)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb")
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/scripts/flat.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/scripts/population.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/scripts/magnetic.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
add_executable(flat src/main.cc src/material.cc src/materials/bigraphene.cc src/materials/graphene.cc)
target_compile_features(flat PRIVATE cxx_aggregate_default_initializers)
